--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "demo-app",
+	"name": "sveltekit-demo",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -12,11 +12,19 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"autoprefixer": "^10.4.14",
+		"daisyui": "^3.5.0",
+		"postcss": "^8.4.27",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"firebase": "^10.1.0",
+		"firebase-admin": "^11.10.1"
+	}
 }
